🐛 fix(shiki.css): fix the bug of always displaying scrollbars

--- a/src/app/(article)/posts/[id]/shiki.css
+++ b/src/app/(article)/posts/[id]/shiki.css
@@ -250,5 +250,5 @@ code .line:not(:last-child)::after {
 
 /* 解决代码越界bug */
 .shiki {
-  overflow: scroll;
+  overflow: auto;
 }
